src/App.css
.header-content {
  background-color: #282c34;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}
.login-button {
  background: linear-gradient(45deg, #6a11cb 0%, #2575fc 100%);
  color: white;
  border: none;
  padding: 10px 20px;
  font-size: 1em;
  cursor: pointer;
  border-radius: 20px;
  outline: none;
  transition: all 0.3s ease;
  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
  text-transform: uppercase;
  letter-spacing: 1px;
}

.login-button:hover, .login-button:focus {
  background: linear-gradient(45deg, #2575fc 0%, #6a11cb 100%);
  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
transform: translateY(-2px);
}


.App {
  background-blend-mode: soft-light;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  width: 100%;
  background-color: #282c34; /* Dark header background */
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  position: relative; /* Needed for absolute positioning of children */
}

.App-link {
  color: #61dafb;
}
.avatar-image {
  border-radius: 50%; /* This will make the image fully round */
  object-fit: cover; /* Ensures the image covers the area without being distorted */
  width: 550px; /* Optional: adjust as needed */
  height: 550px; /* Optional: adjust as needed */
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.company-name {
  font-size: 1.5em; /* Large text for the company name */
  font-weight: bold;
}
.right-content {
  display: flex;
  align-items: center;
}
.login-text {
  margin-right: 20px; /* Space between login and menu icon */
}
.menu-icon {
  font-size: 1.5em;
  cursor: pointer;
  padding-left: 10px;
  padding-right: 10px; /* Padding to prevent touching the window edge */
}

.App-body {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding: 20px;
  width: 100%;
}
.info-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.product-description {
  max-width: 550px; /* Limit the width of text */
}
.App {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  text-align: center;
  padding-top: 40px;
}


/* Additional styles for gradients and icons */
.font-color-gradient {
  background: linear-gradient(45deg, #6a11cb 0%, #2575fc 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.fas.fa-bars {
  color: white; /* Ensures icon is visible against the dark header */
}

/* Media Queries for Mobile Optimization */
@media (max-width: 768px) {
  .App-body {
    flex-direction: column; /* Stack elements vertically on mobile */
  }
  .avatar-image {
    width: 300px;  /* Smaller width for mobile */
    height: 300px; /* Smaller height for mobile */
  }
  .product-description, .info-section {
    align-items: center;
    text-align: center;
  }

  .header-content, .right-content {
    flex-direction: row;
    align-items: center;
    text-align: center;
    padding: 5px;
  }

  .login-text {
    margin-right: 10px; /* Remove margin for mobile layout */
    margin-top: 0px; /* Add some spacing */
  }
  .login-button {
    padding: 8px 16px;
  font-size: 0.9em;
  border-radius: 15px;
  }

  .menu-icon {
    padding-left: 10px;
  }

  .company-name {
    margin-bottom: 10px; /* Add space below the company name on mobile */
  }
}
@media (max-width: 480px) {
  .avatar-image {
    width: 200px;  /* Even smaller width for small mobile screens */
    height: 200px; /* Even smaller height for small mobile screens */
  }
}

